--- a/testimonials-grid-section-main/css/style.css
+++ b/testimonials-grid-section-main/css/style.css
@@ -1,18 +1,12 @@
-html {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  font-family: 'Barlow Semi Condensed', sans-serif;
-  font-size: 16px;
-  background-color: #ecf2f8;
-  height: 100vh;
-}
-
 *, *:before, *:after {
   -webkit-box-sizing: inherit;
           box-sizing: inherit;
 }
 
 body {
+  background-color: #ecf2f8;
+  font-family: 'Barlow Semi Condensed', sans-serif;
+  font-size: 16px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -22,24 +16,22 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin: 60px 20px;
   height: 100%;
 }
 
 .container {
-  padding: 4em 15px;
   display: -ms-grid;
   display: grid;
-  height: 100%;
-  -ms-grid-columns: (100%)[1];
-      grid-template-columns: repeat(1, 100%);
-  gap: 15px;
-  width: 100%;
-  max-width: 90rem;
+  -ms-grid-columns: (1fr)[1];
+      grid-template-columns: repeat(1, 1fr);
+  gap: 20px;
+  max-width: 1100px;
 }
 
 .card {
-  padding: 25px;
   border-radius: 10px;
+  padding: 25px;
 }
 
 .card__user {
@@ -54,27 +46,27 @@ body {
 .card__img {
   border-radius: 50em;
   height: 32px;
-  margin-right: 1.2em;
+  margin-right: 1.2rem;
 }
 
 .card__name {
-  margin: 0 0 3px 0;
   font-size: 0.85rem;
+  margin: 0 0 3px 0;
 }
 
 .card__check {
-  margin: 0;
   font-size: 0.7rem;
+  margin: 0;
 }
 
 .card__testimony-one {
-  font-size: 1.24rem;
+  font-size: 1.19rem;
   font-weight: bolder;
 }
 
 .card__testimony-two {
   font-size: 0.813rem;
-  line-height: 18px;
+  line-height: 20px;
   margin: 0;
 }
 
@@ -108,13 +100,17 @@ body {
   color: #ffffff;
 }
 
+.card-four .card__img {
+  border: 2px solid #a166ff;
+}
+
 .card-four .card__testimony-two, .card-four .card__check {
   color: rgba(255, 255, 255, 0.5);
 }
 
 .card-five, .card-three {
   background-color: #ffffff;
-  color: #19212e;
+  color: #48556a;
 }
 
 .card-five .card__testimony-two, .card-five .card__check, .card-three .card__testimony-two, .card-three .card__check {
@@ -123,9 +119,9 @@ body {
 
 @media screen and (min-width: 540px) {
   .container {
-    -ms-grid-columns: (50%)[2];
-        grid-template-columns: repeat(2, 50%);
-        grid-template-areas: "one four" "one four" "two three" "five five";
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-areas: "one three" "one four" "two four" "five five";
   }
   .card-one {
     -ms-grid-row: 1;
@@ -141,12 +137,12 @@ body {
   .card-three {
     -ms-grid-column-align: start;
         justify-self: start;
-    -ms-grid-row: 3;
+    -ms-grid-row: 1;
     -ms-grid-column: 2;
     grid-area: three;
   }
   .card-four {
-    -ms-grid-row: 1;
+    -ms-grid-row: 2;
     -ms-grid-row-span: 2;
     -ms-grid-column: 2;
     grid-area: four;
@@ -160,9 +156,18 @@ body {
 }
 
 @media screen and (min-width: 1024px) {
+  html {
+    height: 100vh;
+  }
+  body {
+    font-size: 50px;
+    margin: 0;
+  }
   .container {
-    -ms-grid-columns: (25%)[4];
-        grid-template-columns: repeat(4, 25%);
+    -ms-grid-columns: (1fr)[4];
+        grid-template-columns: repeat(4, 1fr);
+    -ms-grid-rows: (auto)[2];
+        grid-template-rows: repeat(2, auto);
         grid-template-areas: " one one two five " " three four four five ";
   }
 }
