--- a/testimonials-grid-section-main/css/style.scss
+++ b/testimonials-grid-section-main/css/style.scss
@@ -20,38 +20,32 @@ $breakpoints: (
   }
 }
 
-html {
-  box-sizing: border-box;
-  font-family: 'Barlow Semi Condensed', sans-serif;
-  font-size: 16px;
-  background-color: $Light-grayish-blue;
-  height: 100vh;
-}
-
 *, *:before, *:after {
   box-sizing: inherit;
 }
 
 body {
+  background-color: $Light-grayish-blue;
+  font-family: 'Barlow Semi Condensed', sans-serif;
+  font-size: 16px;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 60px 20px;
   height: 100%;
 }
 
 .container {
-  padding: 4em 15px;
   display: grid;
-  height: 100%;
-  grid-template-columns: repeat(1, 100%);
-  gap: 15px;
-  width: 100%;
-  max-width: 90rem;
+  grid-template-columns: repeat(1, 1fr);
+  
+  gap: 20px;
+  max-width: 1100px;
 }
 
 .card {
-  padding: 25px;
   border-radius: 10px;
+  padding: 25px;
 
   &__user {
     align-items: center;
@@ -61,27 +55,27 @@ body {
   &__img {
     border-radius: 50em;
     height: 32px;
-    margin-right: 1.2em;
+    margin-right: 1.2rem;
   }
 
   &__name {
-    margin: 0 0 3px 0;
     font-size: 0.85rem;
+    margin: 0 0 3px 0;
   }
 
   &__check {
-    margin: 0;
     font-size: 0.7rem;
+    margin: 0;
   }
 
   &__testimony-one {
-    font-size: 1.24rem;
+    font-size: 1.19rem;
     font-weight: bolder;
   }
 
   &__testimony-two {
     font-size: 0.813rem;
-    line-height: 18px;
+    line-height: 20px;
     margin: 0;
   }
 }
@@ -104,7 +98,7 @@ body {
 .card-two {
   background-color: $Very-dark-grayish-blue;
   color: $White;
-
+  
   .card__testimony-two, .card__check  {
     color: rgba(255, 255, 255, 0.5);
   }
@@ -114,6 +108,10 @@ body {
   background-color: $Very-dark-blackish-blue;
   color: $White;
 
+  .card__img {
+    border: 2px solid $Moderate-violet-light;
+  }
+
   .card__testimony-two, .card__check  {
     color: rgba(255, 255, 255, 0.5);
   }
@@ -121,8 +119,7 @@ body {
 
 .card-five, .card-three  {
   background-color: $White;
-  color: $Very-dark-blackish-blue;
-
+  color: $Very-dark-grayish-blue;
   .card__testimony-two, .card__check  {
     color: rgba(25, 33, 46, 0.5);
   }
@@ -130,11 +127,11 @@ body {
 
 @include media-query(small) {
   .container {
-    grid-template-columns: repeat(2,50%);
+    grid-template-columns: repeat(2, 1fr);
     grid-template-areas: 
+    "one three"
     "one four"
-    "one four"
-    "two three"
+    "two four"
     "five five";
   }
 
@@ -161,10 +158,25 @@ body {
 }
 
 @include media-query(large) {
+  html {
+    height: 100vh;
+  }
+  
+  body {
+    font-size: 50px;
+    margin: 0;
+  }
   .container {
-    grid-template-columns: repeat(4,25%);
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, auto);
     grid-template-areas: 
     " one one two five "
     " three four four five ";
   }
+
+  // .card {
+  //   &__testimony-two {
+  //     line-height: 18px;
+  //   }
+  // }
 }
