Fixed bug, redistribution of each card with flex

--- a/testimonials-grid-section-main/css/style.scss
+++ b/testimonials-grid-section-main/css/style.scss
@@ -45,6 +45,9 @@ body {
 
 .card {
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
   padding: 25px;
 
   &__user {
