Add mobile desing

--- a/testimonials-grid-section-main/css/style.css
+++ b/testimonials-grid-section-main/css/style.css
@@ -23,7 +23,7 @@ body {
 .container {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr);
+  -ms-grid-columns: (1fr)[1];
       grid-template-columns: repeat(1, 1fr);
   gap: 20px;
   max-width: 1100px;
@@ -129,7 +129,7 @@ body {
 
 @media screen and (min-width: 540px) {
   .container {
-    -ms-grid-columns: (1fr);
+    -ms-grid-columns: (1fr)[2];
         grid-template-columns: repeat(2, 1fr);
         grid-template-areas: "one three" "one four" "two four" "five five";
   }
@@ -174,9 +174,9 @@ body {
     margin: 0;
   }
   .container {
-    -ms-grid-columns: (1fr);
+    -ms-grid-columns: (1fr)[4];
         grid-template-columns: repeat(4, 1fr);
-    -ms-grid-rows: (auto);
+    -ms-grid-rows: (auto)[2];
         grid-template-rows: repeat(2, auto);
         grid-template-areas: " one one two five " " three four four five ";
   }
