--- a/blogr-landing-page-main/css/style.scss
+++ b/blogr-landing-page-main/css/style.scss
@@ -15,40 +15,112 @@ $very-dark-gray-blue: hsl(237, 17%, 21%);
 $very-dark-desaturated-blue: hsl(237, 23%, 32%);
 
 //Fonts
-@import url('https://fonts.googleapis.com/css2?family=Overpass:wght@300;600&family=Ubuntu:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Overpass:wght@300;600;700&family=Ubuntu:wght@400;500;700&display=swap");
 //  font-family: 'Ubuntu', sans-serif;
 
 body {
-  font-family: 'Overpass', sans-serif;
+  font-family: "Overpass", sans-serif;
   font-size: 16px;
 }
 
-
 .header {
-  background: linear-gradient(135deg, rgba(255, 143, 112,1) 20%, rgba(255, 61, 84,1) 70%), url(./images/bg-pattern-intro.svg) no-repeat;
+  background: linear-gradient(
+      135deg,
+      rgba(255, 143, 112, 1) 20%,
+      rgba(255, 61, 84, 1) 70%
+    ),
+    url(./images/bg-pattern-intro.svg) no-repeat;
+  background-blend-mode: hue;
   background-position: 37% 30%;
-  background-blend-mode:hue;
   background-size: 1200px;
-  height: 75vh;
   border-end-start-radius: 100px;
-  padding: 50px 30px;
+  height: 75vh;
   margin-bottom: 100px;
-  
+  padding: 50px 30px;
+
   &__states {
+    align-items: center;
     display: flex;
     justify-content: space-between;
-    align-items: center;
     position: relative;
-    
+
     .hamburger {
-      width: 32px;
       height: 20px;
+      width: 32px;
+    }
+
+    .hamburger--size {
+      height: 32px;
+      width: 32px;
     }
   }
-  
+
   &__nav {
+    background-color: $white;
+    color: $very-dark-blue;
+    // display: none;
+    font-size: 1.1em;
+    font-weight: 700;
+    border-radius: 5px;
+    box-shadow: 0px 10px 25px 0px rgba(0,0,0,0.3);
+    left: 0;
     position: absolute;
-    display: none;
+    padding: 20px;
+    text-align: center;
+    top: 70px;
+    right: 0;
+
+    ul {
+      list-style: none;
+      padding-left: 0px;
+      margin-top: 20px;
+      li {
+        margin-bottom: 20px;
+        span {
+          margin-left: 8px;
+        }
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+    }
+  }
+
+  .sub-list {
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    padding: 25px;
+  }
+
+  &__buttons {
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction:column;
+    margin-top: 25px;
+
+    .btn-sign,
+    .btn-login {
+      border-radius: 40px;
+      border: none;
+      font-family: "Ubuntu", sans-serif;
+      font-size: 1.1em;
+      font-weight: 500;
+      padding: 15px 40px;
+    }
+
+    .btn-login {
+      border: none;
+      background-color: transparent;
+      color: $very-dark-blue;
+      margin: 10px 0;
+    }
+
+    .btn-sign {
+      background: linear-gradient(90deg, rgba(255,143,112,1) 0%, rgba(255,61,84,1) 100%);
+      color: $white;
+    }
   }
 
   &__info {
@@ -69,25 +141,37 @@ body {
       color: $white;
     }
   }
-  
-  .button__start, .button__learn {
+
+
+  .btn-start,
+  .btn-learn {
     border: none;
     border-radius: 40px;
     padding: 15px 20px;
     font-weight: bold;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: "Ubuntu", sans-serif;
   }
 
-  .button__start {
-    background-color: $white;
+  .btn-start {
+    background-color: rgba(255, 255, 255, 1);
     color: $light-red-text;
+
+    &:hover {
+      background-color: rgba(255, 255, 255, 0.2);
+      color: $white;
+    }
   }
 
-  .button__learn {
+  .btn-learn {
     border: 1px solid $white;
-    background-color: transparent;
+    background-color: rgba(255, 255, 255, 0);
     color: $white;
     margin-left: 10px;
+
+    &:hover {
+      background-color: rgba(255, 255, 255, 1);
+      color: $light-red-text;
+    }
   }
 }
 
@@ -101,9 +185,10 @@ body {
       height: 330px;
     }
   }
-  
+
   &__two {
-    background: url('./images/bg-pattern-circles.svg'), linear-gradient(135deg, #2c2d3f, #3f4164);
+    background: url("./images/bg-pattern-circles.svg"),
+      linear-gradient(135deg, #2c2d3f, #3f4164);
     background-size: 630px, contain;
     background-position: center -270px, center center;
     background-repeat: no-repeat, repeat;
@@ -115,43 +200,43 @@ body {
     margin: 265px 0 0;
     padding: 0 0 100px;
     color: $white;
-    
+
     .sections__img {
       height: 150px;
       position: relative;
       min-width: 360px;
       max-width: 360px;
       top: -180px;
-      
+
       .img {
         position: absolute;
       }
     }
-    
+
     .sections__title {
       font-size: 40px;
       text-align: center;
       color: $white;
       margin: 50px 30px 20px;
     }
-    
+
     .sections__paragraph {
       color: $grayish-blue;
       margin-bottom: 0;
     }
   }
-  
+
   &__three {
-    margin:60px 0 100px;
+    margin: 60px 0 100px;
     .img {
       background-image: url(./images/illustration-laptop-mobile.svg);
       background-position: center;
       background-repeat: no-repeat;
       height: 330px;
       margin-bottom: 50px;
-    }    
+    }
   }
-  
+
   &__title {
     color: $very-dark-blue;
     font-size: 28px;
@@ -159,7 +244,7 @@ body {
     text-align: center;
     margin: 50px 30px;
   }
-  
+
   &__subtitle {
     color: $very-dark-blue;
     font-size: 28px;
@@ -167,7 +252,7 @@ body {
     margin: 25px 30px;
     text-align: center;
   }
-  
+
   &__paragraph {
     color: $very-dark-grayish-blue;
     line-height: 28px;
@@ -186,11 +271,11 @@ body {
   flex-direction: column;
   font-size: 1rem;
   padding: 70px 0;
-  
+
   .footer__img {
     margin-bottom: 50px;
   }
-  
+
   .footer__box {
     align-items: center;
     display: flex;
@@ -202,11 +287,14 @@ body {
       color: $grayish-blue;
       margin-top: 10px;
       text-decoration: none;
+
+      &:hover {
+        text-decoration: underline;
+      }
     }
   }
-  
 }
 
 .hiden {
-  display: none !important;
+  display: none;
 }
