--- a/blogr-landing-page-main/css/style.css
+++ b/blogr-landing-page-main/css/style.css
@@ -41,6 +41,7 @@ body {
 .header__nav {
   background-color: white;
   color: #1f3f5b;
+  display: none;
   font-size: 1.1em;
   font-weight: 700;
   border-radius: 5px;
@@ -76,6 +77,7 @@ body {
   background-color: rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   padding: 25px;
+  display: none;
 }
 
 .header__buttons {
@@ -315,7 +317,16 @@ body {
   text-decoration: underline;
 }
 
-.hiden {
-  display: none;
+.show {
+  display: initial;
+}
+
+.list--styles .arrow {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.list--styles .sub-list {
+  display: block;
 }
 /*# sourceMappingURL=style.css.map */
