Add formatting to file

--- a/blogr-landing-page-main/css/style.scss
+++ b/blogr-landing-page-main/css/style.scss
@@ -62,7 +62,7 @@ body {
     font-size: 1.1em;
     font-weight: 700;
     border-radius: 5px;
-    box-shadow: 0px 10px 25px 0px rgba(0,0,0,0.3);
+    box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);
     left: 0;
     position: absolute;
     padding: 20px;
@@ -99,7 +99,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction:column;
+    flex-direction: column;
     margin-top: 25px;
 
     .btn-sign,
@@ -120,7 +120,11 @@ body {
     }
 
     .btn-sign {
-      background: linear-gradient(90deg, rgba(255,143,112,1) 0%, rgba(255,61,84,1) 100%);
+      background: linear-gradient(
+        90deg,
+        rgba(255, 143, 112, 1) 0%,
+        rgba(255, 61, 84, 1) 100%
+      );
       color: $white;
     }
   }
@@ -143,7 +147,6 @@ body {
       color: $white;
     }
   }
-
 
   .btn-start,
   .btn-learn {
@@ -297,7 +300,6 @@ body {
   }
 }
 
-
 .show {
   display: initial;
 }
@@ -305,7 +307,7 @@ body {
 .list--styles {
   .arrow {
     transform: rotate(180deg);
-  }  
+  }
   .sub-list {
     display: block;
   }
