Add heading and footer desktop design

--- a/blogr-landing-page-main/css/style.css
+++ b/blogr-landing-page-main/css/style.css
@@ -4,6 +4,11 @@ body {
   font-size: 16px;
 }
 
+.container--max-wigth {
+  max-width: 1200px;
+  margin: auto;
+}
+
 .header {
   background: linear-gradient(135deg, #ff8f70 20%, #ff3d54 70%), url(./images/bg-pattern-intro.svg) no-repeat;
   background-blend-mode: hue;
@@ -13,6 +18,13 @@ body {
   height: 75vh;
   margin-bottom: 100px;
   padding: 50px 30px;
+}
+
+@media (min-width: 900px) {
+  .header {
+    background-position: 23% 50%;
+    background-size: initial;
+  }
 }
 
 .header__states {
@@ -38,6 +50,19 @@ body {
   width: 32px;
 }
 
+@media (min-width: 900px) {
+  .header__states {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 100px 1fr;
+        grid-template-columns: 100px 1fr;
+    width: 100%;
+  }
+  .header__states .hamburger {
+    display: none;
+  }
+}
+
 .header__nav {
   background-color: white;
   color: #1f3f5b;
@@ -47,12 +72,12 @@ body {
   border-radius: 5px;
   -webkit-box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);
           box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);
-  left: 0;
   position: absolute;
   padding: 20px;
   text-align: center;
   top: 70px;
   right: 0;
+  left: 0;
 }
 
 .header__nav ul {
@@ -71,6 +96,68 @@ body {
 
 .header__nav ul li:last-child {
   margin-bottom: 0;
+}
+
+@media (min-width: 400px) {
+  .header__nav {
+    left: initial;
+    width: 287px;
+  }
+}
+
+@media (min-width: 900px) {
+  .header__nav {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    background-color: transparent;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    color: white;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin-left: 80px;
+    padding: 0;
+    position: initial;
+    width: auto;
+  }
+  .header__nav ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin: 0;
+    position: relative;
+  }
+  .header__nav ul .list {
+    margin: 0;
+  }
+  .header__nav ul .list:hover {
+    text-decoration: underline;
+  }
+  .header__nav ul .list .sub-list {
+    background: white;
+    color: #1f3f5b;
+    text-align: start;
+    position: absolute;
+    top: 40px;
+    font-size: 0.9em;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 400;
+    padding: 30px 25px;
+  }
+  .header__nav ul .list .sub-list li:hover {
+    font-weight: 700;
+  }
+  .header__nav ul .list span {
+    margin-right: 30px;
+  }
 }
 
 .header .sub-list {
@@ -121,6 +208,29 @@ body {
   color: white;
 }
 
+@media (min-width: 900px) {
+  .header__buttons {
+    border: none;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    margin: 0;
+  }
+  .header__buttons .btn-login {
+    color: white;
+    margin: 0;
+  }
+  .header__buttons .btn-sign {
+    background: white;
+    color: #ff525d;
+  }
+  .header__buttons .btn-sign:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+    color: white;
+  }
+}
+
 .header__info {
   height: 90%;
   display: -webkit-box;
@@ -145,6 +255,12 @@ body {
   margin: 0 0 50px;
   font-size: 1.2em;
   color: white;
+}
+
+@media (min-width: 900px) {
+  .header__info-title {
+    font-size: 4em;
+  }
 }
 
 .header .btn-start,
@@ -269,15 +385,18 @@ body {
 }
 
 .footer {
+  background-color: #25252d;
+  border-top-right-radius: 100px;
+}
+
+.footer__container {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: #25252d;
-  border-top-right-radius: 100px;
-  color: white;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  color: white;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -286,11 +405,11 @@ body {
   padding: 70px 0;
 }
 
-.footer .footer__img {
+.footer__container .footer__img {
   margin-bottom: 50px;
 }
 
-.footer .footer__box {
+.footer__container .footer__box {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -303,18 +422,42 @@ body {
           flex-direction: column;
 }
 
-.footer .footer__box .title {
+.footer__container .footer__box .title {
   margin-top: 50px;
 }
 
-.footer .footer__box a {
+.footer__container .footer__box a {
   color: #c8c8cb;
   margin-top: 10px;
   text-decoration: none;
 }
 
-.footer .footer__box a:hover {
+.footer__container .footer__box a:hover {
   text-decoration: underline;
+}
+
+@media (min-width: 900px) {
+  .footer__container {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .footer__container .footer__box {
+    text-align: start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .footer__container .footer__box .title {
+    margin-top: 0px;
+  }
 }
 
 .show {
@@ -328,5 +471,9 @@ body {
 
 .list--styles .sub-list {
   display: block;
+}
+
+.hidden {
+  display: none;
 }
 /*# sourceMappingURL=style.css.map */
