--- a/blogr-landing-page-main/css/style.css
+++ b/blogr-landing-page-main/css/style.css
@@ -294,12 +294,38 @@ body {
   color: #ff525d;
 }
 
+.sections__one {
+  margin-top: 50px;
+}
+
 .sections__one .img {
-  background-image: url(./images/illustration-editor-mobile.svg);
+  background-image: url("./images/illustration-editor-mobile.svg");
   background-repeat: no-repeat;
   background-position: center;
-  background-size: cover;
   height: 330px;
+}
+
+@media (min-width: 900px) {
+  .sections__one {
+    padding: 160px 0;
+    background: url("./images/illustration-editor-desktop.svg") no-repeat;
+    background-position: right -250px center;
+  }
+  .sections__one .img {
+    display: none;
+  }
+  .sections__one .container-one {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
 }
 
 .sections__two {
@@ -309,16 +335,6 @@ body {
   background-repeat: no-repeat, repeat;
   border-top-right-radius: 100px;
   border-bottom-left-radius: 100px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   margin: 265px 0 0;
   padding: 0 0 100px;
   color: white;
@@ -327,18 +343,22 @@ body {
 .sections__two .sections__img {
   height: 150px;
   position: relative;
-  min-width: 360px;
-  max-width: 360px;
   top: -180px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .sections__two .sections__img .img {
   position: absolute;
+  width: 360px;
 }
 
 .sections__two .sections__title {
   font-size: 40px;
-  text-align: center;
   color: white;
   margin: 50px 30px 20px;
 }
@@ -346,6 +366,40 @@ body {
 .sections__two .sections__paragraph {
   color: #c8c8cb;
   margin-bottom: 0;
+}
+
+@media (min-width: 900px) {
+  .sections__two {
+    padding: 0;
+    margin: 0;
+  }
+  .sections__two .sections__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+  .sections__two .sections__container .sections__img {
+    width: 50%;
+    height: 100%;
+    top: initial;
+  }
+  .sections__two .sections__container .sections__img .img {
+    width: initial;
+  }
+  .sections__two .sections__container .sections__content {
+    width: 50%;
+  }
+  .sections__two .sections__container .sections__content .sections__title {
+    margin: 0;
+  }
+  .sections__two .sections__container .sections__content .sections__paragraph {
+    text-align: start;
+    width: 100%;
+    margin: 0;
+  }
 }
 
 .sections__three {
@@ -365,7 +419,7 @@ body {
   font-size: 28px;
   font-weight: 600;
   text-align: center;
-  margin: 50px 30px;
+  margin: 0 30px 50px;
 }
 
 .sections__subtitle {
@@ -382,6 +436,19 @@ body {
   text-align: center;
   margin: 0 20px 50px 30px;
   font-size: 16px;
+}
+
+@media (min-width: 900px) {
+  .sections__title {
+    text-align: start;
+  }
+  .sections__subtitle {
+    text-align: start;
+  }
+  .sections__paragraph {
+    text-align: start;
+    width: 40%;
+  }
 }
 
 .footer {
